# Langchain-Pinecone_RAG_Conversation

./: Dockerfile  pyproject.toml  requirements.txt
my-app/app/: server.py
