[tool.poetry]
name = "langchain-pinecone-rag-conversation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "my-app/app" },
    { include = "my-app/packages/rag-conversation/rag_conversation" },
    { include = "my-app/packages/extraction-openai-functions/extraction_openai_functions" }
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
fastapi = "^0.90.1"
uvicorn = ">=0.23.2,<0.24.0"
langserve = {extras = ["server"], version = ">=0.0.30,<0.2.2"}
pydantic = "^1.10.2"
langchain_openai = "^0.1.0"
langchain_community = "^0.2.1"
langchain_core = "^0.2.3"
langchain_pinecone = "^0.1.1"
typing-extensions = "^4.0.1"
openai = "^1.30.5"
pinecone-client = ">=3.2.2,<4.0.0"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = "0.0.24"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
